--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">YuanJin</string>
+
+    <string name="image_contentDescription">image</string>
 </resources>
