--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">YuanJin</string>
 
     <string name="image_contentDescription">image</string>
+    <string name="btn_sumit">提交</string>
 </resources>
